--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".RateCalcActivity"></activity>
+        <activity android:name=".RateCalcActivity" android:theme="@style/Theme.AppCompat.Dialog"></activity>
         <activity android:name=".MyAdapterActivity" />
         <activity android:name=".mylist2Activity" />
         <activity android:name=".mylistActivity" />
