Fragment页面的使用

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".RateCalcActivity" android:theme="@style/Theme.AppCompat.Dialog"></activity>
+        <activity android:name=".Frame"></activity>
+        <activity
+            android:name=".RateCalcActivity"
+            android:theme="@style/Theme.AppCompat.Dialog" />
         <activity android:name=".mylist2Activity" />
         <activity android:name=".mylistActivity" />
         <activity android:name=".RareListActivity" />
